--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-div.css-1r6slb0.e1tzin5v1{
+div.css-1r6slb0.esravye1{
     background-color: #fafafa;
     border: 2px solid;
     padding: 20px 20px 20px 20px;
