--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ div.css-1r6slb0.e1tzin5v1{
     border: 2px solid;
     padding: 20px 20px 20px 20px;
     border-radius: 10px;
-    color: #3913a0;
+    color: #c71f5f;
     box-shadow: 10px;
    }
 
